[project]
name = "agent_2"
version = "0.1.0"
description = "agent_2 using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.102.0,<1.0.0"
]

[project.scripts]
agent_2 = "agent_2.main:run"
run_crew = "agent_2.main:run"
train = "agent_2.main:train"
replay = "agent_2.main:replay"
test = "agent_2.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
